--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
-*.class
+gwt-unitCache
+www-test
+target
+.project
+*.iml
+.settings
+.idea
+.classpath
+.gwt
+bin
+META-INF
 
-# Package Files #
-*.jar
-*.war
-*.ear
